Se incluyeron iconos

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@
 
 .card-hotel{
 	flex: 1 150px; 
-	padding: 2px 5px 2px 5px
+	padding: 2px 5px 2px 5px;
+	margin-top: 10px;
 }
 
 .btn{
@@ -15,4 +16,12 @@
 
 footer {
 	background-color: rgba(95,45,85,0.8);
+}
+
+.footer-address-icon{
+	padding-right: 10px;
+}
+
+.icono{
+	color:black;
 }
