--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 	margin-top: 10px;
 }
 
-.btn{
+.btnInf{
 	background-color: rgba(95,45,85,0.8);
 	width: 100%;
 }
@@ -27,8 +27,9 @@ footer {
 }
 
 .im{
-display:block;
-margin:auto;
+	display:block;
+	margin:auto;
+	padding-bottom: 10px;
 }
 
 .tab-content{
